plugins {
	id 'org.springframework.boot' version '2.1.5.RELEASE'
	id 'java'
}

apply plugin: 'io.spring.dependency-management'

group = 'com.authserver'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

configurations {
	developmentOnly
	runtimeClasspath {
		extendsFrom developmentOnly
	}
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot
	implementation 'org.springframework.boot:spring-boot-starter-web'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'javax.servlet:jstl:1.2'

	// JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'com.h2database:h2'
	
	// MariaDB
	implementation 'org.mariadb.jdbc:mariadb-java-client:2.3.0'
	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
	
	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.10.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.10.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.10.5'

	// Apache HTTP Compoment
	implementation 'org.apache.httpcomponents:httpclient:4.5.9'

	// Google-api-client
	// implementation 'com.google.api-client:google-api-client:1.24.1'
}
